# quant-stack

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.github/workflows/: python-package.yml
config/: dashboard.yaml  settings.yaml
notebooks/: 01_full_demo.ipynb  01_research_template.ipynb
scripts/: fetch_data.py  generate_report.py  run_api.py  run_backtest.py  run_pipeline.py  run_rebalance.py
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/backtest/: __init__.py  engine.py  strategy.py
src/dashboard/: __init__.py  components.py
src/dashboard/pages/: __init__.py  execution.py  overview.py
src/data/: __init__.py  alpha_vantage_fetcher.py  cleaner.py  fetcher.py  live_price.py  synthetic.py
src/execution/: __init__.py  broker.py  oms.py
src/features/: __init__.py  pipeline.py  technical.py  visualisation.py
src/models/: __init__.py  automl.py  base.py  classical.py  evaluation.py  targets.py
src/portfolio/: __init__.py  analysis.py  optimiser.py  risk.py
src/quant_stack/: __init__.py  indicators.py  pricing.py  returns.py  risk.py
src/scheduler/: __init__.py  alerts.py  pipeline.py  scheduler.py
src/services/: __init__.py  data_service.py  execution_service.py  portfolio_service.py  strategy_service.py
src/utils/: __init__.py  config.py  logging.py  validators.py
tests/: conftest.py  test_indicators.py  test_pricing.py  test_returns.py  test_risk.py
tests/test_api/: __init__.py  test_endpoints.py
tests/test_backtest/: test_backtest.py  test_engine.py  test_realistic.py  test_strategy.py
tests/test_data/: test_live_price.py  test_pipeline.py
tests/test_execution/: test_broker.py  test_execution.py  test_oms.py  test_safety.py
tests/test_features/: test_pipeline.py  test_technical.py
tests/test_models/: test_automl.py  test_base.py  test_classical.py  test_evaluation.py  test_models.py  test_targets.py
tests/test_portfolio/: test_analysis.py  test_optimiser.py  test_risk.py
tests/test_scheduler/: test_pipeline.py
tests/test_services/: conftest.py  test_data_service.py  test_execution_service.py
